// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostCard should match snapshot for horizontal variant 1`] = `
<View
  accessibilityHint="Tap to read the full article"
  accessibilityLabel="Ukraine's President Zelensky to BBC: Blood money being paid for Russian... by BBC News. Europe. Posted 14m ago. 2.3K likes, 120 comments."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 6,
      "elevation": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
      "variants": {
        "variant": {
          "horizontal": {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          "vertical": {
            "flexDirection": "column",
          },
        },
      },
    }
  }
>
  <ViewManagerAdapter_ExpoImage
    accessibilityIgnoresInvertColors={true}
    accessible={false}
    backgroundColor={4294638588}
    borderRadius={6}
    containerViewRef={"[React.ref]"}
    contentFit="cover"
    contentPosition={
      {
        "left": "50%",
        "top": "50%",
      }
    }
    height={96}
    nativeViewRef={"[React.ref]"}
    onError={[Function]}
    onLoad={[Function]}
    onLoadStart={[Function]}
    onProgress={[Function]}
    placeholder={
      [
        {
          "height": 16,
          "uri": "blurhash:/LKN%5DRv%252Tw=w%5D~RBVZRi%7D;RPxuwH",
          "width": 16,
        },
      ]
    }
    source={
      [
        {
          "uri": "https://picsum.photos/400/300?random=1",
        },
      ]
    }
    style={
      {
        "backgroundColor": "#FAFBFC",
        "borderRadius": 6,
        "height": 96,
        "width": 96,
      }
    }
    transition={null}
    width={96}
  />
  <View
    style={
      {
        "flex": 1,
        "height": "100%",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessibilityHint="Category: Europe"
      accessibilityLabel="Category: Europe"
      accessibilityRole="text"
      accessible={true}
      numberOfLines={1}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#4E4B66",
            "flex": 1,
            "fontSize": 12,
            "textTransform": "capitalize",
          },
        ]
      }
    >
      Europe
    </Text>
    <Text
      accessibilityLabel="Ukraine's President Zelensky to BBC: Blood money being paid for Russian..."
      accessibilityRole="text"
      accessible={true}
      numberOfLines={2}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Ukraine's President Zelensky to BBC: Blood money being paid for Russian...
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <View
          accessibilityHint="Tap to view author profile"
          accessibilityLabel="BBC News"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "elevation": 1,
              "flexDirection": "row",
              "gap": 8,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            }
          }
        >
          <View
            style={
              {
                "position": "relative",
                "variants": {
                  "rounded": {
                    "false": {
                      "borderRadius": 6,
                    },
                    "true": {
                      "borderRadius": 9999,
                    },
                  },
                  "size": {
                    "lg": {
                      "height": 70,
                      "width": 70,
                    },
                    "md": {
                      "height": 40,
                      "width": 40,
                    },
                    "sm": {
                      "height": 24,
                      "width": 24,
                    },
                    "xl": {
                      "height": 100,
                      "width": 100,
                    },
                    "xs": {
                      "height": 20,
                      "width": 20,
                    },
                    "xxl": {
                      "height": 140,
                      "width": 140,
                    },
                  },
                },
              }
            }
            testID="avatar-wrapper"
          >
            <View
              accessibilityHint=""
              accessibilityLabel="B"
              accessibilityRole="image"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FAFBFC",
                    "height": "100%",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "variants": {
                      "rounded": {
                        "false": {
                          "borderRadius": 6,
                        },
                        "true": {
                          "borderRadius": 9999,
                        },
                      },
                      "size": {},
                    },
                    "width": "100%",
                  },
                  false,
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                accessibilityIgnoresInvertColors={true}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height="100%"
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={
                  [
                    {
                      "height": 16,
                      "uri": "blurhash:/LKN%5DRv%252Tw=w%5D~RBVZRi%7D;RPxuwH",
                      "width": 16,
                    },
                  ]
                }
                source={
                  [
                    {
                      "uri": "https://picsum.photos/100/100?random=20",
                    },
                  ]
                }
                style={
                  {
                    "height": "100%",
                    "variants": {
                      "rounded": {
                        "false": {
                          "borderRadius": 6,
                        },
                        "true": {
                          "borderRadius": 9999,
                        },
                      },
                      "size": {},
                    },
                    "width": "100%",
                  }
                }
                transition={
                  {
                    "duration": 200,
                  }
                }
                variants={
                  {
                    "rounded": {
                      "false": {
                        "borderRadius": 6,
                      },
                      "true": {
                        "borderRadius": 9999,
                      },
                    },
                    "size": {},
                  }
                }
                width="100%"
              />
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              accessibilityLabel="BBC News"
              accessibilityRole="text"
              accessible={true}
              numberOfLines={1}
              style={
                [
                  {
                    "variants": {
                      "align": {
                        "center": {
                          "textAlign": "center",
                        },
                        "justify": {
                          "textAlign": "justify",
                        },
                        "left": {
                          "textAlign": "left",
                        },
                        "right": {
                          "textAlign": "right",
                        },
                      },
                      "color": {
                        "accent": {
                          "color": "#1877F2",
                        },
                        "disabled": {
                          "color": "#B0B3B8",
                        },
                        "error": {
                          "color": "#ED2E7E",
                        },
                        "errorHover": {
                          "color": "#C30052",
                        },
                        "link": {
                          "color": "#1877F2",
                        },
                        "onPrimary": {
                          "color": "#FFFFFF",
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                        },
                        "primary": {
                          "color": "#050505",
                        },
                        "secondary": {
                          "color": "#4E4B66",
                        },
                        "success": {
                          "color": "#00BA88",
                        },
                        "successHover": {
                          "color": "#00966D",
                        },
                        "tertiary": {
                          "color": "#667080",
                        },
                        "warning": {
                          "color": "#F4B740",
                        },
                        "warningHover": {
                          "color": "#946200",
                        },
                      },
                      "decoration": {
                        "lineThrough": {
                          "textDecorationLine": "line-through",
                        },
                        "none": {
                          "textDecorationLine": "none",
                        },
                        "underline": {
                          "textDecorationLine": "underline",
                        },
                        "underlineLineThrough": {
                          "textDecorationLine": "underline line-through",
                        },
                      },
                      "textTransform": {
                        "capitalize": {
                          "textTransform": "capitalize",
                        },
                        "lowercase": {
                          "textTransform": "lowercase",
                        },
                        "none": {
                          "textTransform": "none",
                        },
                        "uppercase": {
                          "textTransform": "uppercase",
                        },
                      },
                      "variant": {
                        "body": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                        "bodyLg": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 18,
                          "fontWeight": "400",
                          "lineHeight": 28,
                        },
                        "bodySm": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "lineHeight": 20,
                        },
                        "button": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "letterSpacing": 0.12,
                          "lineHeight": 24,
                        },
                        "caption": {
                          "color": "#4E4B66",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                        },
                        "display": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 48,
                          "fontWeight": "700",
                          "lineHeight": 56,
                        },
                        "h1": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 32,
                          "fontWeight": "700",
                          "lineHeight": 40,
                        },
                        "h2": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 24,
                          "fontWeight": "700",
                          "lineHeight": 32,
                        },
                        "h3": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 20,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h4": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 18,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h5": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "lineHeight": 24,
                        },
                        "label": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "lineHeight": 20,
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                      },
                    },
                  },
                  {
                    "color": "#050505",
                    "fontWeight": "600",
                  },
                ]
              }
            >
              BBC News
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={14}
            bbWidth={14}
            fill="none"
            focusable={false}
            height={14}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={14}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGGroup
                clipPath="a"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10Zm0-2a8 8 0 1 0 0-16.001A8 8 0 0 0 12 20Zm1-8h4v2h-6V7h2v5Z"
                  fill={
                    {
                      "payload": 4283321190,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
              <RNSVGDefs>
                <RNSVGClipPath
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  name="a"
                >
                  <RNSVGPath
                    d="M0 0h24v24H0z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGClipPath>
              </RNSVGDefs>
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            accessibilityHint="Posted 14m ago"
            accessibilityLabel="Posted 14m ago"
            accessibilityRole="text"
            accessible={true}
            numberOfLines={1}
            style={
              [
                {
                  "variants": {
                    "align": {
                      "center": {
                        "textAlign": "center",
                      },
                      "justify": {
                        "textAlign": "justify",
                      },
                      "left": {
                        "textAlign": "left",
                      },
                      "right": {
                        "textAlign": "right",
                      },
                    },
                    "color": {
                      "accent": {
                        "color": "#1877F2",
                      },
                      "disabled": {
                        "color": "#B0B3B8",
                      },
                      "error": {
                        "color": "#ED2E7E",
                      },
                      "errorHover": {
                        "color": "#C30052",
                      },
                      "link": {
                        "color": "#1877F2",
                      },
                      "onPrimary": {
                        "color": "#FFFFFF",
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                      },
                      "primary": {
                        "color": "#050505",
                      },
                      "secondary": {
                        "color": "#4E4B66",
                      },
                      "success": {
                        "color": "#00BA88",
                      },
                      "successHover": {
                        "color": "#00966D",
                      },
                      "tertiary": {
                        "color": "#667080",
                      },
                      "warning": {
                        "color": "#F4B740",
                      },
                      "warningHover": {
                        "color": "#946200",
                      },
                    },
                    "decoration": {
                      "lineThrough": {
                        "textDecorationLine": "line-through",
                      },
                      "none": {
                        "textDecorationLine": "none",
                      },
                      "underline": {
                        "textDecorationLine": "underline",
                      },
                      "underlineLineThrough": {
                        "textDecorationLine": "underline line-through",
                      },
                    },
                    "textTransform": {
                      "capitalize": {
                        "textTransform": "capitalize",
                      },
                      "lowercase": {
                        "textTransform": "lowercase",
                      },
                      "none": {
                        "textTransform": "none",
                      },
                      "uppercase": {
                        "textTransform": "uppercase",
                      },
                    },
                    "variant": {
                      "body": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                      "bodyLg": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 18,
                        "fontWeight": "400",
                        "lineHeight": 28,
                      },
                      "bodySm": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                      },
                      "button": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "letterSpacing": 0.12,
                        "lineHeight": 24,
                      },
                      "caption": {
                        "color": "#4E4B66",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "lineHeight": 16,
                      },
                      "display": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 48,
                        "fontWeight": "700",
                        "lineHeight": 56,
                      },
                      "h1": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 32,
                        "fontWeight": "700",
                        "lineHeight": 40,
                      },
                      "h2": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 24,
                        "fontWeight": "700",
                        "lineHeight": 32,
                      },
                      "h3": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 20,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h4": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h5": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      "label": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                    },
                  },
                },
                {
                  "color": "#667080",
                  "fontSize": 12,
                },
              ]
            }
          >
            14m ago
          </Text>
        </View>
        <View
          accessibilityHint="Tap to open a menu with more options for this post"
          accessibilityLabel="More options"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={14}
            bbWidth={14}
            fill="none"
            focusable={false}
            height={14}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={14}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGGroup
                clipPath="a"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5Zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5Zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5Z"
                  fill={
                    {
                      "payload": 4283321190,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
              <RNSVGDefs>
                <RNSVGClipPath
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  name="a"
                >
                  <RNSVGPath
                    d="M0 0h24v24H0z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGClipPath>
              </RNSVGDefs>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PostCard should match snapshot for vertical variant 1`] = `
<View
  accessibilityHint="Tap to read the full article"
  accessibilityLabel="Ukraine's President Zelensky to BBC: Blood money being paid for Russian... by BBC News. Europe. Posted 14m ago. 2.3K likes, 120 comments."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 6,
      "elevation": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
      "variants": {
        "variant": {
          "horizontal": {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          "vertical": {
            "flexDirection": "column",
          },
        },
      },
    }
  }
>
  <ViewManagerAdapter_ExpoImage
    accessibilityIgnoresInvertColors={true}
    accessible={false}
    backgroundColor={4294638588}
    borderRadius={6}
    containerViewRef={"[React.ref]"}
    contentFit="cover"
    contentPosition={
      {
        "left": "50%",
        "top": "50%",
      }
    }
    height={183}
    nativeViewRef={"[React.ref]"}
    onError={[Function]}
    onLoad={[Function]}
    onLoadStart={[Function]}
    onProgress={[Function]}
    placeholder={
      [
        {
          "height": 16,
          "uri": "blurhash:/LKN%5DRv%252Tw=w%5D~RBVZRi%7D;RPxuwH",
          "width": 16,
        },
      ]
    }
    source={
      [
        {
          "uri": "https://picsum.photos/400/300?random=1",
        },
      ]
    }
    style={
      {
        "backgroundColor": "#FAFBFC",
        "borderRadius": 6,
        "height": 183,
        "width": "100%",
      }
    }
    transition={null}
    width="100%"
  />
  <View
    style={
      {
        "gap": 4,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityHint="Category: Europe"
      accessibilityLabel="Category: Europe"
      accessibilityRole="text"
      accessible={true}
      numberOfLines={1}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#4E4B66",
            "flex": 1,
            "fontSize": 12,
            "textTransform": "capitalize",
          },
        ]
      }
    >
      Europe
    </Text>
    <Text
      accessibilityLabel="Ukraine's President Zelensky to BBC: Blood money being paid for Russian..."
      accessibilityRole="text"
      accessible={true}
      numberOfLines={2}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Ukraine's President Zelensky to BBC: Blood money being paid for Russian...
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <View
          accessibilityHint="Tap to view author profile"
          accessibilityLabel="BBC News"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "elevation": 1,
              "flexDirection": "row",
              "gap": 8,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            }
          }
        >
          <View
            style={
              {
                "position": "relative",
                "variants": {
                  "rounded": {
                    "false": {
                      "borderRadius": 6,
                    },
                    "true": {
                      "borderRadius": 9999,
                    },
                  },
                  "size": {
                    "lg": {
                      "height": 70,
                      "width": 70,
                    },
                    "md": {
                      "height": 40,
                      "width": 40,
                    },
                    "sm": {
                      "height": 24,
                      "width": 24,
                    },
                    "xl": {
                      "height": 100,
                      "width": 100,
                    },
                    "xs": {
                      "height": 20,
                      "width": 20,
                    },
                    "xxl": {
                      "height": 140,
                      "width": 140,
                    },
                  },
                },
              }
            }
            testID="avatar-wrapper"
          >
            <View
              accessibilityHint=""
              accessibilityLabel="B"
              accessibilityRole="image"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FAFBFC",
                    "height": "100%",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "variants": {
                      "rounded": {
                        "false": {
                          "borderRadius": 6,
                        },
                        "true": {
                          "borderRadius": 9999,
                        },
                      },
                      "size": {},
                    },
                    "width": "100%",
                  },
                  false,
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                accessibilityIgnoresInvertColors={true}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height="100%"
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={
                  [
                    {
                      "height": 16,
                      "uri": "blurhash:/LKN%5DRv%252Tw=w%5D~RBVZRi%7D;RPxuwH",
                      "width": 16,
                    },
                  ]
                }
                source={
                  [
                    {
                      "uri": "https://picsum.photos/100/100?random=20",
                    },
                  ]
                }
                style={
                  {
                    "height": "100%",
                    "variants": {
                      "rounded": {
                        "false": {
                          "borderRadius": 6,
                        },
                        "true": {
                          "borderRadius": 9999,
                        },
                      },
                      "size": {},
                    },
                    "width": "100%",
                  }
                }
                transition={
                  {
                    "duration": 200,
                  }
                }
                variants={
                  {
                    "rounded": {
                      "false": {
                        "borderRadius": 6,
                      },
                      "true": {
                        "borderRadius": 9999,
                      },
                    },
                    "size": {},
                  }
                }
                width="100%"
              />
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              accessibilityLabel="BBC News"
              accessibilityRole="text"
              accessible={true}
              numberOfLines={1}
              style={
                [
                  {
                    "variants": {
                      "align": {
                        "center": {
                          "textAlign": "center",
                        },
                        "justify": {
                          "textAlign": "justify",
                        },
                        "left": {
                          "textAlign": "left",
                        },
                        "right": {
                          "textAlign": "right",
                        },
                      },
                      "color": {
                        "accent": {
                          "color": "#1877F2",
                        },
                        "disabled": {
                          "color": "#B0B3B8",
                        },
                        "error": {
                          "color": "#ED2E7E",
                        },
                        "errorHover": {
                          "color": "#C30052",
                        },
                        "link": {
                          "color": "#1877F2",
                        },
                        "onPrimary": {
                          "color": "#FFFFFF",
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                        },
                        "primary": {
                          "color": "#050505",
                        },
                        "secondary": {
                          "color": "#4E4B66",
                        },
                        "success": {
                          "color": "#00BA88",
                        },
                        "successHover": {
                          "color": "#00966D",
                        },
                        "tertiary": {
                          "color": "#667080",
                        },
                        "warning": {
                          "color": "#F4B740",
                        },
                        "warningHover": {
                          "color": "#946200",
                        },
                      },
                      "decoration": {
                        "lineThrough": {
                          "textDecorationLine": "line-through",
                        },
                        "none": {
                          "textDecorationLine": "none",
                        },
                        "underline": {
                          "textDecorationLine": "underline",
                        },
                        "underlineLineThrough": {
                          "textDecorationLine": "underline line-through",
                        },
                      },
                      "textTransform": {
                        "capitalize": {
                          "textTransform": "capitalize",
                        },
                        "lowercase": {
                          "textTransform": "lowercase",
                        },
                        "none": {
                          "textTransform": "none",
                        },
                        "uppercase": {
                          "textTransform": "uppercase",
                        },
                      },
                      "variant": {
                        "body": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                        "bodyLg": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 18,
                          "fontWeight": "400",
                          "lineHeight": 28,
                        },
                        "bodySm": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "lineHeight": 20,
                        },
                        "button": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "letterSpacing": 0.12,
                          "lineHeight": 24,
                        },
                        "caption": {
                          "color": "#4E4B66",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                        },
                        "display": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 48,
                          "fontWeight": "700",
                          "lineHeight": 56,
                        },
                        "h1": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 32,
                          "fontWeight": "700",
                          "lineHeight": 40,
                        },
                        "h2": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 24,
                          "fontWeight": "700",
                          "lineHeight": 32,
                        },
                        "h3": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 20,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h4": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 18,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h5": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "lineHeight": 24,
                        },
                        "label": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "lineHeight": 20,
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                      },
                    },
                  },
                  {
                    "color": "#050505",
                    "fontWeight": "600",
                  },
                ]
              }
            >
              BBC News
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={14}
            bbWidth={14}
            fill="none"
            focusable={false}
            height={14}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={14}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGGroup
                clipPath="a"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10Zm0-2a8 8 0 1 0 0-16.001A8 8 0 0 0 12 20Zm1-8h4v2h-6V7h2v5Z"
                  fill={
                    {
                      "payload": 4283321190,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
              <RNSVGDefs>
                <RNSVGClipPath
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  name="a"
                >
                  <RNSVGPath
                    d="M0 0h24v24H0z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGClipPath>
              </RNSVGDefs>
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            accessibilityHint="Posted 14m ago"
            accessibilityLabel="Posted 14m ago"
            accessibilityRole="text"
            accessible={true}
            numberOfLines={1}
            style={
              [
                {
                  "variants": {
                    "align": {
                      "center": {
                        "textAlign": "center",
                      },
                      "justify": {
                        "textAlign": "justify",
                      },
                      "left": {
                        "textAlign": "left",
                      },
                      "right": {
                        "textAlign": "right",
                      },
                    },
                    "color": {
                      "accent": {
                        "color": "#1877F2",
                      },
                      "disabled": {
                        "color": "#B0B3B8",
                      },
                      "error": {
                        "color": "#ED2E7E",
                      },
                      "errorHover": {
                        "color": "#C30052",
                      },
                      "link": {
                        "color": "#1877F2",
                      },
                      "onPrimary": {
                        "color": "#FFFFFF",
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                      },
                      "primary": {
                        "color": "#050505",
                      },
                      "secondary": {
                        "color": "#4E4B66",
                      },
                      "success": {
                        "color": "#00BA88",
                      },
                      "successHover": {
                        "color": "#00966D",
                      },
                      "tertiary": {
                        "color": "#667080",
                      },
                      "warning": {
                        "color": "#F4B740",
                      },
                      "warningHover": {
                        "color": "#946200",
                      },
                    },
                    "decoration": {
                      "lineThrough": {
                        "textDecorationLine": "line-through",
                      },
                      "none": {
                        "textDecorationLine": "none",
                      },
                      "underline": {
                        "textDecorationLine": "underline",
                      },
                      "underlineLineThrough": {
                        "textDecorationLine": "underline line-through",
                      },
                    },
                    "textTransform": {
                      "capitalize": {
                        "textTransform": "capitalize",
                      },
                      "lowercase": {
                        "textTransform": "lowercase",
                      },
                      "none": {
                        "textTransform": "none",
                      },
                      "uppercase": {
                        "textTransform": "uppercase",
                      },
                    },
                    "variant": {
                      "body": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                      "bodyLg": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 18,
                        "fontWeight": "400",
                        "lineHeight": 28,
                      },
                      "bodySm": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                      },
                      "button": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "letterSpacing": 0.12,
                        "lineHeight": 24,
                      },
                      "caption": {
                        "color": "#4E4B66",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "lineHeight": 16,
                      },
                      "display": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 48,
                        "fontWeight": "700",
                        "lineHeight": 56,
                      },
                      "h1": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 32,
                        "fontWeight": "700",
                        "lineHeight": 40,
                      },
                      "h2": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 24,
                        "fontWeight": "700",
                        "lineHeight": 32,
                      },
                      "h3": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 20,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h4": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h5": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      "label": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                    },
                  },
                },
                {
                  "color": "#667080",
                  "fontSize": 12,
                },
              ]
            }
          >
            14m ago
          </Text>
        </View>
        <View
          accessibilityHint="Tap to open a menu with more options for this post"
          accessibilityLabel="More options"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={14}
            bbWidth={14}
            fill="none"
            focusable={false}
            height={14}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={14}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGGroup
                clipPath="a"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5Zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5Zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5Z"
                  fill={
                    {
                      "payload": 4283321190,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
              <RNSVGDefs>
                <RNSVGClipPath
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  name="a"
                >
                  <RNSVGPath
                    d="M0 0h24v24H0z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGClipPath>
              </RNSVGDefs>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;
